--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,47 +1,58 @@
 <div class="login-form">
-    <form #loginForm="ngForm" (ngSubmit)="validarInicio()">
+    <form #loginForm="ngForm" (ngSubmit)=" loginForm.form.valid && validarInicio()" >
         <div class="container ">
-            <div class="container  my-5">
-                <img src="../../assets/imagenes/logo.png" alt="LOGO SIBEPct" id="logoInicio">
-            </div>
-
-            <div class=" form-group input-group validar">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">
-                        <img src="../../assets/iconos/correo.png" alt="Icono correo">
-                    </span>
+            <div class="container">
+                <div class="container  my-5">
+                    <img src="../../assets/imagenes/logo.png" alt="LOGO SIBEPct" id="logoInicio">
                 </div>
-                <input type="email" name="correo" class="form-control" placeholder="Correo"   #correo="ngModel" [(ngModel)]="datorForm.correo" required pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$">
-            </div>
-            <p class="error" *ngIf="!correo.valid && correo.touched"><span>El correo es inválido</span></p>
-            <p class="error" *ngIf="correo.untouched"><span></span></p>
-            <p class="error" *ngIf="correo.valid"><span></span></p>
 
-            <div class="form-group input-group validar">
-                <div class="input-group-prepend">
-                    <span class="input-group-text">
-                        <img src="../../assets/iconos/contrasena.png" alt="Icono contraseña">
-                    </span>
+                <div class=" form-group input-group validar">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <img src="../../assets/iconos/correo.png" alt="Icono correo">
+                        </span>
+                    </div>
+                    <input type="email" name="email" class="form-control" placeholder="Correo" #email="ngModel"
+                        [(ngModel)]="datosForm.email" required
+                        pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" >
                 </div>
-                <input type="password" name="contrasena" class="form-control" placeholder="Contraseña" #contrasena="ngModel" [(ngModel)]="datorForm.contrasena" required>
-            </div>
-            <p class="error" *ngIf="!contrasena.valid && contrasena.touched"> <span>La contraseña es obligatoria</span></p>
-            <p class="error" *ngIf="contrasena.untouched"><span></span></p>
-            <p class="error" *ngIf="contrasena.valid"><span></span></p>
+                <p class="error" *ngIf="!email.valid && email.touched"><span>El correo es inválido</span></p>
+                <p class="error" *ngIf="email.untouched ||email.valid"></p>
+    
 
-            <div class="form-group">
-                <input type="submit" value="Iniciar sesión" class="btn btn-block btn-info" [disabled]="loginForm.invalid">                
-            </div><br>
+                <div class="form-group input-group validar">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text">
+                            <img src="../../assets/iconos/contrasena.png" alt="Icono contraseña">
+                        </span>
+                    </div>
+                    <input type="password" name="password" class="form-control" placeholder="Contraseña"
+                        #password="ngModel" [(ngModel)]="datosForm.password" required>
+                </div>
+                <p class="error" *ngIf="!password.valid && password.touched"> <span>La contraseña es
+                        obligatoria</span></p>
+                <p class="error" *ngIf="password.untouched || password.valid"><span></span></p>
+               
 
-            <div class="form-group ">
-                <a id="btn-olvideC">¿Has olvidado la contraseña?</a>
+                <div class="form-group">
+                    <input type="submit" value="INICIAR SESIÓN" class="btn btn-block " id="iniciarSesion"
+                        [disabled]="loginForm.invalid">
+                </div><br>
+
+                <div class="form-group ">
+                    <a id="btn-olvideC">¿Has olvidado la contraseña?</a>
+                </div>
+                <div class="form-group ">
+                    <a id="btn-crearC" [routerLink]="['/crearUsuario']" >Crear una cuenta</a>
+                </div>
             </div>
-            <div class="form-group ">
-                <a id="btn-crearC">Crear una cuenta</a>
-            </div>
+            <div class="alert alert-danger" role="alert" id="errorM">
+                {{mensaje}}
+              </div>
+              
         </div><br><br><br><br>
 
 
-       
+
     </form>
 </div>
