--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,9 +1,10 @@
 <div class="login-form">
     <form #loginForm="ngForm" (ngSubmit)=" loginForm.form.valid && validarInicio()" >
-        <div class="container ">
+        <div class="container " id="containerMayor">
             <div class="container">
-                <div class="container  my-5">
+                <div class="container  my-4" id="title-Inicio">
                     <img src="../../assets/imagenes/logo.png" alt="LOGO SIBEPct" id="logoInicio">
+                    <h5 >INICIAR SESIÓN</h5>
                 </div>
 
                 <div class=" form-group input-group validar">
@@ -38,6 +39,11 @@
                     <input type="submit" value="INICIAR SESIÓN" class="btn btn-block " id="iniciarSesion"
                         [disabled]="loginForm.invalid">
                 </div><br>
+                 <div class="gif">
+                    <img src="../../../assets/iconos/cargando.gif" alt="Cargando..." id="gif">
+                 </div>
+                    
+               
 
                 <div class="form-group ">
                     <a id="btn-olvideC">¿Has olvidado la contraseña?</a>
