--- a/src/app/componentes/registrar-usuario/registrar-usuario.component.css
+++ b/src/app/componentes/registrar-usuario/registrar-usuario.component.css
@@ -1,3 +1,26 @@
+.login-form{
+  width: 377px;
+  background-color: white;
+  overflow: auto;
+  height: 105vh;
+  float: right; 
+  margin-top: -7px; 
+  -webkit-box-shadow: -6px 1px 12px 0px rgba(39,45,117,0.43);
+  -moz-box-shadow: -6px 1px 12px 0px rgba(39,45,117,0.43);
+  box-shadow: -6px 1px 12px 0px rgba(39,45,117,0.43);
+ /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
+ animation-name: prueba;
+ animation-duration: 220ms;
+}
+@keyframes prueba {
+ from{ 
+  width: 0px;
+  }
+  to{
+   width: 377px;
+  }    
+}
+
 .alert-danger{
     background-color: #DB0D0D;
     color: white;
@@ -6,11 +29,13 @@
    -moz-box-shadow: -1px 2px 20px 0px rgba(0,0,0,0.39);
    box-shadow: -1px 2px 20px 0px rgba(0,0,0,0.39);
    border-radius: 10px;
-   display: none;
+   display: none; 
+   opacity: 0.7;
    }
 
    .alert-danger2{
     background-color: #00923F;
+    border:1px solid #00923F;
     color: white;
     font-weight: bold;
     -webkit-box-shadow: -1px 2px 20px 0px rgba(0,0,0,0.39);
@@ -41,22 +66,12 @@
        margin: 0 auto;
      }
      #logoInicio{
-      width: 164px;
-      height: 165px;
+      width: 141px;
+    height: 138px;
+      margin-bottom: 10px !important;
      }
      
-     .login-form{
-       width: 377px;
-       background-color: white;
-       overflow: auto;
-       height: 105vh;
-       float: right; 
-       margin-top: -7px; 
-       -webkit-box-shadow: -6px 1px 12px 0px rgba(39,45,117,0.43);
-       -moz-box-shadow: -6px 1px 12px 0px rgba(39,45,117,0.43);
-       box-shadow: -6px 1px 12px 0px rgba(39,45,117,0.43);
-      /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); */
-     }
+     
      .validar{
        margin-bottom: 0 !important;
      }
@@ -103,8 +118,8 @@
      
      @media  (max-width: 298px){
        #logoInicio{
-         width: 185px;
-         height: 90px;
+        width: 102px;
+        height: 99px;
        }
        #btn-olvideC,#tenerCuenta{
          font-size: small;
@@ -118,11 +133,37 @@
         margin-bottom: 0;;
       }
 
-      input:focus {
-        box-shadow: none;
-        border: 1px solid #F8C300;   
-     }
-
+      
      input, .valid, input[type ="email"],input[type ="password"] {
       border: 1px solid  #00923F;
     } 
+    input:focus {
+      box-shadow: none;
+      border: 1px solid #F8C300;   
+   }
+   
+    input:hover {    
+      border: 1px solid #F8C300;    
+    }
+
+    #containerMayor{
+      position: relative;
+      
+    }
+    #errorM{
+      position: absolute;
+      left: 35px;
+      top: 142px;
+      z-index: 0;
+      right: 35px;
+      font-size: small;
+    }
+
+    #title-crearU{
+      text-align: center;
+      padding-bottom: 0 !important;
+    }
+
+
+    
+   
