--- a/src/app/componentes/registrar-usuario/registrar-usuario.component.html
+++ b/src/app/componentes/registrar-usuario/registrar-usuario.component.html
@@ -1,17 +1,20 @@
 <div class="login-form">
-    <form #crearUsuario="ngForm" (ngSubmit)="registrarUsuario()">
-        <div class="container ">
+    <form #crearUsuario="ngForm" (ngSubmit)="registrarUsuario()" id="formCrearUsuario">
+        <div class="container " id="containerMayor">
             <div class="container">
-                <div class="container  my-5">
+                <div class="container  my-4" id="title-crearU">
                     <img src="../../assets/imagenes/logo.png" alt="LOGO SIBEPct" id="logoInicio">
+                    <h5 >CREAR USUARIO</h5>
+                    
                 </div>
 
                 <div class=" form-group input-group validar">
                     <div class="input-group-prepend">
                         <span class="input-group-text">
-                            <img src="../../assets/iconos/cedula.png" alt="Icono cédula">
-                        </span>
+                            <img src="../../assets/iconos/cedula.png" alt="Icono cédula">                            
+                        </span>                        
                     </div>
+                    
                     <input type="number" name="cedula" class="form-control" placeholder="Número de cédula"
                         #cedula="ngModel" [(ngModel)]="formCrearUsuario.cedula" required pattern="^[0-9]+$">
                 </div>
@@ -86,11 +89,9 @@
 
             </div>
             <div class="alert alert-danger" role="alert" id="errorM">
-                {{mensaje}}
+             {{mensaje}}
             </div>
-            <div class="alert alert-danger" role="alert" id="exito">
-                {{mensaje}}
-            </div>
+            
         </div><br><br><br><br>
 
 
