--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,13 @@ body{
     -webkit-font-smoothing: antialiased;
     -moz-font-smoothing:antialiased;
     -moz-osx-font-smoothing:antialiased;
+    overflow-y: hidden;
+}
+
+body::-webkit-scrollbar {
+  width: 8px;     /* Tamaño del scroll en vertical */
+  height: 8px;    /* Tamaño del scroll en horizontal */
+  display: none;  
 }
 
 
