--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -1,64 +1,67 @@
-<div class="login-form">
-    <form #loginForm="ngForm" (ngSubmit)=" loginForm.form.valid && validarInicio()" >
-        <div class="container " id="containerMayor">
-            <div class="container">
-                <div class="container  my-4" id="title-Inicio">
-                    <img src="../../assets/imagenes/logo.png" alt="LOGO SIBEPct" id="logoInicio">
-                    <h5 >INICIAR SESIÓN</h5>
-                </div>
-
-                <div class=" form-group input-group validar">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">
-                            <img src="../../assets/iconos/correo.png" alt="Icono correo">
-                        </span>
+<div class="div-contenedor">
+    <div class="div-fondo"></div>
+    <div class="login-form">
+        <form #loginForm="ngForm" (ngSubmit)=" loginForm.form.valid && validarInicio()">
+            <div class="container " id="containerMayor">
+                <div class="container">
+                    <div class="container  my-4" id="title-Inicio">
+                        <img src="../../assets/imagenes/logo.png" alt="LOGO SIBEPct" id="logoInicio">
+                        <h5>INICIAR SESIÓN</h5>
                     </div>
-                    <input type="email" name="email" class="form-control" placeholder="Correo" #email="ngModel"
-                        [(ngModel)]="datosForm.email" required
-                        pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email" >
-                </div>
-                <p class="error" *ngIf="!email.valid && email.touched"><span>El correo es inválido</span></p>
-                <p class="error" *ngIf="email.untouched ||email.valid"></p>
-    
 
-                <div class="form-group input-group validar">
-                    <div class="input-group-prepend">
-                        <span class="input-group-text">
-                            <img src="../../assets/iconos/contrasena.png" alt="Icono contraseña">
-                        </span>
+                    <div class=" form-group input-group validar">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">
+                                <img src="../../assets/iconos/correo.png" alt="Icono correo">
+                            </span>
+                        </div>
+                        <input type="email" name="email" class="form-control" placeholder="Correo" #email="ngModel"
+                            [(ngModel)]="datosForm.email" required
+                            pattern="^[a-zA-Z0-9.!#$%&'*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$" id="email">
                     </div>
-                    <input type="password" name="password" class="form-control" placeholder="Contraseña"
-                        #password="ngModel" [(ngModel)]="datosForm.password" required>
+                    <p class="error" *ngIf="!email.valid && email.touched"><span>El correo es inválido</span></p>
+                    <p class="error" *ngIf="email.untouched ||email.valid"></p>
+
+
+                    <div class="form-group input-group validar">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text">
+                                <img src="../../assets/iconos/contrasena.png" alt="Icono contraseña">
+                            </span>
+                        </div>
+                        <input type="password" name="password" class="form-control" placeholder="Contraseña"
+                            #password="ngModel" [(ngModel)]="datosForm.password" required>
+                    </div>
+                    <p class="error" *ngIf="!password.valid && password.touched"> <span>La contraseña es
+                            obligatoria</span></p>
+                    <p class="error" *ngIf="password.untouched || password.valid"><span></span></p>
+
+
+                    <div class="form-group">
+                        <input type="submit" value="INICIAR SESIÓN" class="btn btn-block " id="iniciarSesion"
+                            [disabled]="loginForm.invalid">
+                    </div><br>
+                    <div class="gif">
+                        <img src="../../../assets/iconos/cargando.gif" alt="Cargando..." id="gif">
+                    </div>
+
+
+
+                    <div class="form-group ">
+                        <a id="btn-olvideC">¿Has olvidado la contraseña?</a>
+                    </div>
+                    <div class="form-group ">
+                        <a id="btn-crearC" [routerLink]="['/crear-usuario']">Crear una cuenta</a>
+                    </div>
                 </div>
-                <p class="error" *ngIf="!password.valid && password.touched"> <span>La contraseña es
-                        obligatoria</span></p>
-                <p class="error" *ngIf="password.untouched || password.valid"><span></span></p>
-               
-
-                <div class="form-group">
-                    <input type="submit" value="INICIAR SESIÓN" class="btn btn-block " id="iniciarSesion"
-                        [disabled]="loginForm.invalid">
-                </div><br>
-                 <div class="gif">
-                    <img src="../../../assets/iconos/cargando.gif" alt="Cargando..." id="gif">
-                 </div>
-                    
-               
-
-                <div class="form-group ">
-                    <a id="btn-olvideC">¿Has olvidado la contraseña?</a>
+                <div class="alert alert-danger" role="alert" id="errorM">
+                    {{mensaje}}
                 </div>
-                <div class="form-group ">
-                    <a id="btn-crearC" [routerLink]="['/crearUsuario']" >Crear una cuenta</a>
-                </div>
-            </div>
-            <div class="alert alert-danger" role="alert" id="errorM">
-                {{mensaje}}
-              </div>
-              
-        </div><br><br><br><br>
+
+            </div><br><br><br><br>
 
 
 
-    </form>
+        </form>
+    </div>
 </div>
