--- a/src/app/componentes/productos/producto-registrer/producto-registrer.component.html
+++ b/src/app/componentes/productos/producto-registrer/producto-registrer.component.html
@@ -1,6 +1,6 @@
 <div class="div-contenido">
-    <h4>Registrar Producto</h4>
-    <mat-divider></mat-divider>
-
-  </div>
-
+  <h4>Registrar Producto</h4>
+  <mat-divider class="mb-3"></mat-divider>
+   
+  
+</div>
