--- a/src/app/componentes/usuarios/usuario-list/usuario-list.component.html
+++ b/src/app/componentes/usuarios/usuario-list/usuario-list.component.html
@@ -3,7 +3,41 @@
     <div class="div-contenido">
         <h4>Lista de Usuarios</h4>
         <mat-divider></mat-divider>
+        <div class="container table-responsive mt-2" >
+          <table class="table table-bordered  table-responsive">
 
+              <thead>
+
+                  <tr>
+                      <th scope="col">Cédula </th>
+                      <th scope="col">Nombre </th>
+                      <th scope="col">Correo</th>
+                      <th scope="col">Tipo de Usuario</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <div *ngIf="data; then data else sinData"></div>
+                  <ng-template #data>
+                      <tr *ngFor="let fila of usuarios">
+                          <td class="item-fila">{{fila.cedula}}</td>
+                          <td class="item-fila">{{fila.nombres}}</td>
+                          <td class="item-fila">{{fila.correo}}</td>
+                          <td class="item-fila" >{{fila.tipo_usuario}}</td>
+                         
+                      </tr>
+                  </ng-template>
+                  <ng-template #sinData>
+                      <tr>
+                          <td colspan="4">Sin datos</td>
+                      </tr>
+                  </ng-template>
+
+
+              </tbody>
+          </table>
+          <mat-paginator [length]="[usuarios.length]" [pageSize]="35" [pageSizeOptions]="[5, 10, 25, 100]">
+        </mat-paginator>
       </div>
+    </div>
 
  
