--- a/src/app/componentes/usuarios/usuario-regis/usuario-regis.component.html
+++ b/src/app/componentes/usuarios/usuario-regis/usuario-regis.component.html
@@ -1,8 +1,91 @@
+<div class="div-contenido">
+  <h4 class="mt-1">Registrar Usuario</h4>
+  <mat-divider class="mb-3"></mat-divider>
 
-    <div class="div-contenido">
-        <h4>Registrar Usuario</h4>
-        <mat-divider></mat-divider>
+  <div class="container design-data">
+    <form class="data-form mt-3" novalidate (ngSubmit)="agregarUsuario()" [formGroup]="user">
+      <h5 class="mb-3">Datos básicos</h5>
+      <div class="contenedor-form  ">
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Cédula</mat-label>
+          <input matInput formControlName="cedula">
+          <mat-icon matSuffix>perm_identity</mat-icon>
+          <mat-error *ngIf="user.get('cedula').hasError('pattern') ">
+            Por favor ingrese una cédula válida
+          </mat-error>
+          <mat-error *ngIf="user.get('cedula').hasError('required')">
+            La cédula es <strong>obligatoria</strong>
+          </mat-error>
+          <mat-error *ngIf="user.get('cedula').hasError('minlength')">
+            La cédula debe tener minimo 5 digitos 
+          </mat-error>
+        </mat-form-field>
 
+
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Nombres Completos</mat-label>
+          <input matInput placeholder="Juanito Pérez" formControlName="name">
+          <mat-icon matSuffix>person_pin</mat-icon>
+          <mat-error *ngIf="user.get('name').hasError('pattern') ">
+            Por favor ingrese un nombre válido
+          </mat-error>
+          <mat-error *ngIf="user.get('name').hasError('required')">
+            El nombre es <strong>obligatorio</strong>
+          </mat-error>
+          <mat-error *ngIf="user.get('name').hasError('minlength')">
+            La cédula debe tener minimo 7 caracteres
+          </mat-error>
+        </mat-form-field>
+     
+      
+     
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Correo</mat-label>
+          <input matInput placeholder="ejemplo@example.com" formControlName="email">
+          <mat-icon matSuffix>email</mat-icon>
+          <mat-error *ngIf="user.get('email').hasError('pattern')">
+            Por favor ingrese un correo valido
+          </mat-error>
+          <mat-error *ngIf="user.get('email').hasError('required')">
+            Correo es <strong>obligatorio</strong>
+          </mat-error>
+          <mat-error *ngIf="user.get('email').hasError('minlength')">
+            El correo debe tener minimo 5 caracteres
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field appearance="outline" class="input-form">
+          <mat-label>Contraseña</mat-label>
+          <input type="password" matInput formControlName="password">
+          <mat-icon matSuffix>vpn_key</mat-icon>
+          <mat-error *ngIf="user.get('password').hasError('minlength')">
+            La contraseña debe tener minimo 6 caracteres
+          </mat-error>
+          <mat-error *ngIf="user.get('password').hasError('required')">
+            La contraseña es <strong>obligatoria</strong>
+          </mat-error>
+        </mat-form-field>
+
+        
+        <div class="div-button my-2 mb-3"  >
+          <button type="submit" [disabled]="user.invalid" class="btn btn-secondary">Agregar Usuario</button>
+                
+            </div>
       </div>
+    </form>
+  </div>
 
-  
+  <mat-card id="mensaje-data">
+    <mat-card-header id="mensaje-data-header">
+      <mat-card-title>Mensaje</mat-card-title>
+    </mat-card-header>
+    
+    <mat-card-content>
+      <p id="fuente-p">
+        {{mensaje}}
+      </p>
+    </mat-card-content>
+    
+  </mat-card>
+
+</div>
