--- a/src/app/componentes/dashboard/dashboard.component.html
+++ b/src/app/componentes/dashboard/dashboard.component.html
@@ -5,6 +5,7 @@
         <img src="../../assets/imagenes/logo.png" alt="LOGO SIBEPct" id="logo-dashboard" class="img-fluid">
         <div class="div-name-button">
           <h5>{{name}}</h5>
+          
           <button  [matMenuTriggerFor]="menu">
             <mat-icon>more_vert</mat-icon>
           </button>
@@ -14,7 +15,9 @@
             </button>
 
           </mat-menu>
+         
         </div>
+        <p class="badge badge-secondary" *ngIf="admin">Administrador</p>
       </div>
 
       <nav class="my-2">
