--- a/src/app/componentes/data-dashboard/data-dashboard.component.html
+++ b/src/app/componentes/data-dashboard/data-dashboard.component.html
@@ -135,7 +135,7 @@
 
                 </tbody>
             </table>
-            <div class="div-button"  *ngIf="salidasVendedor2">
+            <div class="div-button" *ngIf="salidasVendedor2">
                 <a href="" class="btn btn-secondary btn-sm">Ver más</a>
             </div>
         </div>
@@ -172,10 +172,14 @@
 
                 </tbody>
             </table>
-            <div class="div-button"  *ngIf="salidasDestruccion2">
+            <div class="div-button" *ngIf="salidasDestruccion2">
                 <a href="" class="btn btn-secondary btn-sm">Ver más</a>
             </div>
         </div>
+
+        <ngx-spinner type="ball-spin-clockwise">
+            <p style="font-size: 20px; color: white">Cargando...</p>
+        </ngx-spinner>
     </div>
 
 </div>
