--- a/src/app/componentes/productos/producto-list/producto-list.component.html
+++ b/src/app/componentes/productos/producto-list/producto-list.component.html
@@ -1,6 +1,59 @@
 <div class="div-contenido">
     <h4>Lista de Productos</h4>
     <mat-divider></mat-divider>
+      
+    <div class="container table-responsive mt-2 ">
+      <table class="table table-bordered  table-responsive">
+
+          <thead>
+
+              <tr>
+                  <th scope="col" class="anchotd">Producto</th>
+                  <th scope="col" class="anchotd">Codigo Barra</th>
+                  <th scope="col" class="anchotd">Cantidad</th>
+                  <th scope="col" class="anchotd">Riesgo</th>
+                  <th scope="col" class="anchotd">Cedula</th>
+                  <th scope="col" class="anchotd">Nombres</th>
+                  <th scope="col" class="anchotd">Apellidos</th>
+                  <th scope="col" class="anchot">Fecha Ingreso</th>
+                  <th scope="col" class="anchot">N° Acta</th>
+              </tr>
+          </thead>
+          <tbody>
+              <div *ngIf="data; then data else sinData"></div>
+              <ng-template #data>
+                  <tr *ngFor="let fila of datos | paginate:page_size:page_number">
+                      <td >{{fila.nombre}}</td>
+                      <td>{{fila.codigoBarra}}</td>
+                      <td>{{fila.cantidadUnitaria}}</td>
+                      <td>{{fila.riesgo}}</td>
+                      <td>{{fila.cedula}}</td>
+                      <td >{{fila.nombres}}</td>
+                      <td >{{fila.apellidos}}</td>
+                      <td >{{fila.fechaIngreso}}</td>
+                      <td >{{fila.numero_acta}}</td>
+                      
+                  </tr>
+              </ng-template>
+              <ng-template #sinData>
+                  <tr>
+                      <td colspan="9">Sin datos</td>
+                  </tr>
+              </ng-template>
+
+
+          </tbody>
+      </table>
+      <mat-paginator [length]="[datos.length]" [pageSize]="page_size" [pageSizeOptions]="[5, 10,20,50, 100]"
+          (page)="paginator($event)" showFirstLastButtons>
+      </mat-paginator>
+
+     
+  </div>
 
   </div>
+
+  <ngx-spinner type="ball-spin-clockwise">
+    <p style="font-size: 20px; color: white">Cargando...</p>
+</ngx-spinner>
 
